# souschef-ai-server

./: .env.example  .gitmodules  Dockerfile  Readme.md  entities.py  main.py  pyproject.toml
app/generate_recipe_service/: __init__.py  entities.py  generate_recipe.py
app/server/: __init__.py  recipe_generation_pb2.py  recipe_generation_pb2_grpc.py  server.py
