[tool.poetry]
name = "souschef-ai-server"
version = "0.1.0"
description = ""
authors = ["sethclim <sethclim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
instructor = "^0.3.1"
grpcio = "^1.59.2"
grpcio-tools = "^1.59.2"
protobuf = "^4.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
